# CS_236

./: Automaton.h  BlockCommentAutomaton.cpp  BlockCommentAutomaton.h  CMakeLists.txt  CommentAutomaton.cpp  CommentAutomaton.h  Database.cpp  Database.h  DatalogProgram.cpp  DatalogProgram.h  E_O_FAutomaton.cpp  E_O_FAutomaton.h  Graph.cpp  Graph.h  Header.cpp  Header.h  IDAutomaton.cpp  IDAutomaton.h  Interpreter.cpp  Interpreter.h  Lexer.cpp  Lexer.h  MatcherAutomaton.cpp  MatcherAutomaton.h  Parameter.cpp  Parameter.h  Parser.cpp  Parser.h  Predicate.cpp  Predicate.h  README.md  Relation.cpp  Relation.h  Rule.cpp  Rule.h  StringAutomaton.cpp  StringAutomaton.h  Token.cpp  Token.h  Tuple.cpp  (+8 more)
PassOffCases/Lab1/1-100/: answer2.txt  input2.txt
PassOffCases/Lab1/1-70/: input1.txt
PassOffCases/Lab1/1-90/: input3.txt
PassOffCases/Lab2/2-100/: input0.txt
PassOffCases/Lab2/2-80/: input0.txt  input1.txt  input2.txt  input3.txt  input4.txt  input5.txt  input6.txt  input7.txt
